do some changes acording to seo

--- a/blogs/exhibition-stand-builder-in-berlin/index.html
+++ b/blogs/exhibition-stand-builder-in-berlin/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6 Reasons to Choose Stand Constructions as Your Exhibition Stand Builder in Berlin</title>
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
