--- a/blogs/index.html
+++ b/blogs/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs | Stand Construction</title>
+    <meta name="description"
+    content="Stand Constructions is the top-leading exhibition stand designer, builder &amp; contractor in Europe with years of expertise in the exhibition stand industry. Contact for high-quality stands." />
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
+    <link rel="icon" href="../assets/images/logos/fevicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="../assets/images/logos/fevicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="../assets/images/logos/fevicon-192x192.png" />
     <link rel="canonical" href="https://www.standconstructions.com/blogs/" />
     <meta name="google-site-verification" content="CwhivjcN1He5lYhGvIiRKF4t5LleNnyi8B6cfnGYxXM" />
     <!-- /SEO tags -->
@@ -36,7 +42,7 @@
     <div class="flex justify-around">
         <input type="checkbox" name="check" id="check">
         <div class="flex items-center">
-            <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+            <img src="../assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
         </div>
         <div class="nav-btn">
             <div class="nav-links">
@@ -161,24 +167,24 @@
                 <div class="grid md:grid-cols-3 gap-5">
                     <div class="flex flex-col gap-4 shadow-lg rounded-lg bg-white">
                         <div>
-                            <a href="https://www.standconstructions.com/exhibition-stand-builder-in-berlin/">
+                            <a href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">
                                 <img src="../assets/images/blogs/blog-1.webp" alt="blog-1-thumbnail">
                             </a>
                         </div>
                         <div class="px-4 pb-2">
-                            <a class="text-xl" href="https://www.standconstructions.com/exhibition-stand-builder-in-berlin/">6 Reasons to Choose Stand Constructions as Your Exhibition Stand Builder in Berlin</a>
+                            <a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">6 Reasons to Choose Stand Constructions as Your Exhibition Stand Builder in Berlin</a>
                             <p class="text-sm text-gray-400">June 6, 2024</p>
                             <p class="text-gray-600 my-2">Berlin, the capital of Germany, witnesses multiple exciting exhibitions each year. These exhibitions exhibition stand builder in Berlin attract visitors</p>
                         </div>
                     </div>
                     <div class="flex flex-col gap-4 shadow-lg rounded-lg bg-white">
                         <div>
-                            <a href="https://www.standconstructions.com/exhibition-stand-builder-in-berlin/">
+                            <a href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">
                                 <img src="../assets/images/blogs/blog-2.webp" alt="blog-1-thumbnail">
                             </a>
                         </div>
                         <div class="px-4 pb-2">
-                            <a class="text-xl" href="https://www.standconstructions.com/exhibition-stand-builder-in-berlin/">Exhibition Stand Design Company in Germany</a>
+                            <a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">Exhibition Stand Design Company in Germany</a>
                             <p class="text-sm text-gray-400">May 20, 2024</p>
                             <p class="text-gray-600 my-2">Welcome to our exhibition stand design company in Germany. As a leading German booth design company, we specialize in creating</p>
                         </div>
@@ -189,95 +195,94 @@
         <!-- /blog thumbnail with grid-->
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-[#000A93] px-[5%] text-white">
-        <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
-            <div class="col-span-3 flex flex-col gap-3">
-                <img src="../assets/images/logos/footer-logo.webp" alt="footer-logo" class="w-40" />
-                <div>
-                    <p class="text-sm">
-                        Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
-                        equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions,
-                        custom and unique stands are created by our talented graphic designers, who carry your brand to
-                        world standards with years of knowledge and experience.
-                    </p>
+        <!-- Footer -->
+        <footer class="bg-[#000A93] px-[5%] text-white ">
+            <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
+                <div class="col-span-3 flex flex-col gap-3">
+                    <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
+                    <div>
+                        <p class="text-sm">
+                            Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
+                            who carry your brand to world standards with years of knowledge and experience.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-span-2">
-                <h4 class="text-2xl font-bold mb-2">Quick Links</h4>
-                <ul class="flex flex-col list-none gap-1">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Process</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
-            <div class="col-span-2">
-                <div>
-                    <h4 class="text-2xl font-bold mb-2">Our Services</h4>
-                    <ul class="flex flex-col gap-2 list-none">
-                        <li><a href="#">Custom Exhibitoin Stand</a></li>
-                        <li><a href="#">Modular Exhibition Stand</a></li>
-                        <li><a href="#">Country Pavilion Exhibition Stand</a></li>
-                        <li><a href="#">Double Decker Exhibition Stand</a></li>
+                <div class="col-span-2">
+                    <h4 class="text-2xl font-bold mb-2">Quick Links</h4>
+                    <ul class="flex flex-col list-none gap-1">
+                        <li><a href="https://www.standconstructions.com/">Home</a></li>
+                        <li><a href="https://www.standconstructions.com/about-us/">About Us</a></li>
+                        <li><a href="https://www.standconstructions.com/#process">Process</a></li>
+                        <li><a href="https://www.standconstructions.com/#portfolio">Portfolio</a></li>
+                        <li><a href="https://www.standconstructions.com/blogs/">Blog</a></li>
+                        <li><a href="https://www.standconstructions.com/#contact">Contact Us</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-span-2">
-                <div>
-                    <h4 class="text-2xl font-bold mb-2">Major Countries</h4>
-                    <ul class="flex flex-col gap-2 list-none">
-                        <li><a href="#">Stand Builder In Germany</a></li>
-                        <li><a href="#">Stand Builder In UK</a></li>
-                        <li><a href="#">Stand Builder In Spain</a></li>
-                        <li><a href="#">Stand Builder In Netherlands</a></li>
-                        <li><a href="#">Stand Builder In Italy</a></li>
-                    </ul>
+                <div class="col-span-2">
+                    <div>
+                        <h4 class="text-2xl font-bold mb-2">Our Services</h4>
+                        <ul class="flex flex-col gap-2 list-none">
+                            <li><a href="#">Custom Exhibitoin Stand</a></li>
+                            <li><a href="#">Modular Exhibition Stand</a></li>
+                            <li><a href="#">Country Pavilion Exhibition Stand</a></li>
+                            <li><a href="#">Double Decker Exhibition Stand</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="col-span-3">
-                <div>
-                    <h4 class="text-2xl font-bold mb-2">Reach Us</h4>
-                    <div class="flex flex-col gap-4">
-                        <div class="flex gap-x-3">
-                            <div class="pt-2">
-                                <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
+                <div class="col-span-2">
+                    <div>
+                        <h4 class="text-2xl font-bold mb-2">Major Countries</h4>
+                        <ul class="flex flex-col gap-2 list-none">
+                            <li><a href="https://www.standconstructions.com/exhibition-stand-builder/germany/">Stand Builder In Germany</a></li>
+                            <li><a href="https://www.standconstructions.com/exhibition-stand-builder/uk/">Stand Builder In UK</a></li>
+                            <li><a href="https://www.standconstructions.com/exhibition-stand-builder/spain/">Stand Builder In Spain</a></li>
+                            <li><a href="https://www.standconstructions.com/exhibition-stand-builder/netherlands/">Stand Builder In Netherlands</a></li>
+                            <li><a href="https://www.standconstructions.com/exhibition-stand-builder/italy/">Stand Builder In Italy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-span-3">
+                    <div>
+                        <h4 class="text-2xl font-bold mb-2">Reach Us</h4>
+                        <div class="flex flex-col gap-4">
+                            <div class="flex gap-x-3">
+                                <div class="pt-2">
+                                    <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
+                                </div>
+                                <div class="flex flex-col">
+                                    <p class="font-semibold">info@standconstructions.com</p>
+                                    <span class="text-sm">Mail us</span>
+                                </div>
                             </div>
-                            <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
-                                <span class="text-sm">Mail us</span>
+                            <div class="flex gap-x-3">
+                                <div class="pt-2">
+                                    <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
+                                </div>
+                                <div class="flex flex-col">
+                                    <p class="font-semibold">standconstructions.com</p>
+                                    <span class="text-sm">Website</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="flex gap-x-3">
-                            <div class="pt-2">
-                                <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
-                            </div>
-                            <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
-                                <span class="text-sm">Website</span>
-                            </div>
-                        </div>
-                        <div class="flex gap-x-3">
-                            <div class="pt-2">
-                                <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
-                            </div>
-                            <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
-                                <span class="text-sm">Located at</span>
+                            <div class="flex gap-x-3">
+                                <div class="pt-2">
+                                    <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
+                                </div>
+                                <div class="flex flex-col">
+                                    <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                    <span class="text-sm">Located at</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </footer>
+    
+        <div class="bg-black text-center py-3">
+            <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
+                    class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
         </div>
-    </footer>
-    <div class="bg-black text-center py-3">
-        <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
-                class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
-    </div>
-    <!-- /Footer-->
+        <!-- /Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../assets/js/script.js"></script>
