--- a/index.html
+++ b/index.html
@@ -733,9 +733,9 @@
         </section>
         <!-- /Italy section-->
         <section>
-            <div class="work-process py-10">
+            <div class="work-process py-10" >
                 <div class="px-[3%]">
-                    <div class="text-center pt-5">
+                    <div class="text-center pt-5" >
                         <span class="text-white md:text-xl">[ Our Process ]</span>
                         <h2 class="md:text-4xl text-xl text-white mt-4 pb-20">How do we create excellence on the
                             exhibition grounds?
@@ -743,10 +743,10 @@
 
                     </div>
 
-                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-6">
+                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-6" >
 
 
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-3 col-sm-6" >
                             <div class="serviceBox">
                                 <div class="service-content">
                                     <div class="service-icon">
@@ -791,7 +791,7 @@
 
                     </div>
 
-                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-20">
+                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-20" id="process">
 
 
                         <div class="col-md-3 col-sm-6">
@@ -845,7 +845,7 @@
             <div class="px-[5%] my-5">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center" id="portfolio">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
@@ -972,7 +972,7 @@
                         </div>
                     </div>
 
-                    <div class="contact-form">
+                    <div class="contact-form" id="contact">
                         <span class="circle one"></span>
                         <span class="circle two"></span>
 
