--- a/404/index.html
+++ b/404/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
-    <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
-    <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
+    <link rel="icon" href="https://www.standconstructions.com/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="https://www.standconstructions.com/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
     <link rel="stylesheet" href="./404.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/tailwind.css">
+    <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/style.css">
+    <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/tailwind.css">
 </head>
 
 <body>
